Validating & admin scrollbar flickering fix

--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -47,7 +47,7 @@ html, body
 
 #canvas
     position: absolute
-    width: 100%
+    width: 99%
     margin: auto
     z-index: -1
 
